syntax = "proto2";
package ch.ubique.notifyme.sdk.backend.model;
option java_package = "ch.ubique.notifyme.sdk.backend.model";

message ProblematicEventWrapper {
  required int32 version = 1;
  repeated ProblematicEvent events = 2;
}

message ProblematicEvent {
  required bytes secretKey = 1;
  required bytes r2 = 2;
  required int64 startTime = 3;
  required int64 endTime = 4;
  optional bytes message = 5;
  optional bytes nonce = 6;
}
